--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <p>There is always going to be something unique about yourself 
     that the person you may be envying may not have. <br>
 Just love yourself regardless and be comfortable and content.</p>
+<script src="src/index.js"></script>
 </body>    
 </html>
